--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
 <title>Chesnut Land Surveying</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 
 <style>
 body, html {height: 100%}
@@ -21,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 .bgimg {
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("w3images/banner_small.png");
+  background-image: url("w3images/banner.png");
   min-height: 90%;
   filter:opacity(80%) brightness(100%);
 }
@@ -109,7 +104,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <img src="/w3images/Facebook_Logo_Primary.png" alt="Facebook" style="width:42px;height:42px;">
       </a>
       <a href="https://www.linkedin.com/in/susanchesnut/" target="_blank">
-        <img src="/w3images/LI-In-Bug.png" alt="LinkedIn" style="width:42px;height:42px;">
+        <img src="/w3images/LI-In-Bug.png" alt="LinkedIn" style="width:42px;height:42px;margin:10px">
       </a>
       </p>
   </div>
