--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 .bgimg {
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("w3images/banner.png");
+  background-image: url("w3images/banner2.png");
   min-height: 90%;
   filter:opacity(80%) brightness(100%);
 }
