Update index.html about & services

--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
 <title>Chesnut Land Surveying</title>
+<link rel="icon" type="image/x-icon" href="/w3images/chesnutlandsurveying_logo.jpg">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
+<link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
 
 <style>
 body, html {height: 100%}
@@ -20,6 +24,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   min-height: 90%;
   filter:opacity(80%) brightness(100%);
 }
+.protest-strike-regular {
+  font-family: "Protest Strike", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 .column {
   float: left;
@@ -71,33 +81,37 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- Header with image -->
 <header class="bgimg w3-display-container" id="home">
   <div class="w3-display-middle w3-center" style="line-height:0.5">
-    <span class="w3-text-black w3-hide-small" style="font-size:100px"><b>Chesnut<br>
-    	<span class="w3-text-black w3-hide-small" style="font-size:40px">Land Surveying
+    <span class="w3-text-black w3-hide-small" style="font-size:150px"><b>Chesnut<br>
+    	<span class="w3-text-black w3-hide-small" style="font-size:75px">Land Surveying
         </span>
       </span>
-    <span class="w3-text-black w3-hide-large w3-hide-medium" style="font-size:60px"><b>Chesnut<br>
-    	<span class="w3-text-black w3-hide-medium" style="font-size:30px">Land Surveying
+    <span class="w3-text-black w3-hide-large w3-hide-medium" style="font-size:100px"><b>Chesnut<br>
+    	<span class="w3-text-black w3-hide-medium" style="font-size:50px">Land Surveying
         </span>
     </span>
   </div>
 </header>
 
 <!-- About Section -->
-<div class="w3-row w3-padding-64" id="about">
-  
-  <div class="w3-col m6 w3-padding-large w3-hide-small">
-    <img src="w3images/susanchesnut.jpg" class="w3-round w3-image" alt="susanchesnut" width="600" height="750">
-  </div>
+<div class="w3-row w3-center w3-padding-64" id="about">
+    <div class="w3-col m6 w3-padding-large w3-hide-small">
+      <img src="w3images/susanchesnut.jpg" class="w3-round w3-image" alt="susanchesnut" width="600" height="750">
+    </div>
 
-  <div class="w3-col m6" style="line-height:1.5">
-    <h1 class="w3-center w3-jumbo w3-text-black" style="margin-bottom:-10px"><u>About</u></h1><br>
-    <p class="w3-large">I am a Registered Land Surveyor in Tennessee (RLS #3778). 
+  <div class="w3-col m6 w3-padding-large" style="line-height:1.5">
+    <h1 class="w3-center w3-jumbo w3-text-black protest-strike-regular" style="margin-bottom:-10px">About</h1><br>
+
+      <p class="w3-left w3-xlarge w3-left-align" style="margin-bottom:-5px">I am a Registered Land Surveyor in Tennessee (RLS #3778). 
       Whether it's marking property lines, conducting boundary surveys, or preparing legal documents, 
       I approach each task with professionalism and attention to detail, 
       tailored to meet the specific needs of my clients.
-      <br>I look forward to working with you!</br>
+      <br>
+      <br>I look forward to working with you!
+      <br>Susan Chesnut</br>
+      <br>
     </p>
-    <p class="w3-large">
+   
+    <p class="w3-xlarge">
       Cell: 256-557-3285
       <br>Email: chesnutlandsurveying@gmail.com</br>
       <a href="https://www.facebook.com/profile.php?id=61556077124398" target="_blank">
@@ -114,28 +128,34 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-container w3-padding-48 w3-blue w3-grayscale w3-xlarge" id="services">
   
   <div class="w3-content">
-    <h1 class="w3-center w3-jumbo w3-text-black" style="margin-bottom:48px"><u>Services</u></h1>
-    	<div class="row w3-text-black">
-        	<div class="column">
-              <p>Boundary Surveying</p>
-              <p>ALTA Surveys</p>
-              <p>Residential Surveying</p>
-            </div>
-          <div class="column">           
-            <p>Property Line Staking</p>
-            <p>Topography Surveys</p>
-            <p>Property Corner Location</p>
-          </div>
-    	</div>
+    <h1 class="w3-center w3-jumbo w3-text-white protest-strike-regular" style="margin-bottom:48px">Services</h1>
+    <p>Chesnut Land Surveying primarily provides boundary surveys, retracements surveys, 
+      property line staking, and property corner location. 
+    </p>
+    <li class="w3-text-black">Possible scenarios we can help with</li>
+    <li style="margin-left:20px">Where are my property corners or property lines?</li>
+    <li style="margin-left:20px">I have a loan closing or re-finance coming up on my home in a subdivision.</li>
+    <li style="margin-left:20px">I’m purchasing a lot/house in a recorded subdivision.</li>
+    <li style="margin-left:20px">I’m purchasing a larger tract of land that hasn’t been subdivided in the past.</li>
+    
+    <p class="w3-mid w3-text-white">Should your particular concern not be listed, 
+      please connect with us for a discussion about your needs.
+      I am more than happy to help!
+    </p>
+
   </div>
 </div>
+
+<!-- Image of location/map
+<img src="/w3images/chesnutlandsurveying_logo.jpg" class="w3-image w3-greyscale" style="width:100%;" id="logo">
+ -->
 
 <!-- Contact -->
 <div class="w3-container w3-padding-48 w3-light-green w3-grayscale w3-xlarge" id="contact">
   <div class="w3-content">
-    <h1 class="w3-center w3-jumbo" style="margin-bottom:64px"><u>Contact</u></h1>
+    <h1 class="w3-center w3-jumbo protest-strike-regular" style="margin-bottom:64px">Contact</h1>
     <p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
-    <p>Call us at 256.557.3285 or fill out the form below for a free quote!</p>
+    <p>Call us at 256-557-3285 or fill out the form below for a free quote!</p>
 
     <br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.
  
