--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
    
     <p class="w3-xlarge">
       Cell: 256-557-3285
-      <br>Email: chesnutlandsurveying@gmail.com</br>
+      <br>Email: <a href="mailto:chesnutlandsurveying@gmail.com">chesnutlandsurveying@gmail.com</a></br>
       <a href="https://www.facebook.com/profile.php?id=61556077124398" target="_blank">
-        <img src="/w3images/Facebook_Logo_Primary.png" alt="Facebook" style="width:42px;height:42px;">
+        <img src="/w3images/Facebook_Logo_Primary.png" alt="Facebook" style="width:42px;height:42px;margin:10px">
       </a>
       <a href="https://www.linkedin.com/in/susanchesnut/" target="_blank">
         <img src="/w3images/LI-In-Bug.png" alt="LinkedIn" style="width:42px;height:42px;margin:10px">
@@ -132,7 +132,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <p>Chesnut Land Surveying primarily provides boundary surveys, retracements surveys, 
       property line staking, and property corner location. 
     </p>
-    <li class="w3-text-black">Possible scenarios we can help with</li>
+    <p class="w3-text-white">Possible scenarios we can help with:</p>
     <li style="margin-left:20px">Where are my property corners or property lines?</li>
     <li style="margin-left:20px">I have a loan closing or re-finance coming up on my home in a subdivision.</li>
     <li style="margin-left:20px">I’m purchasing a lot/house in a recorded subdivision.</li>
@@ -164,6 +164,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <p><input class="w3-input w3-padding-16 w3-border" type="tel" placeholder="Phone Number" required name="phone"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="phone"></p>
       <p><textarea class="w3-input w3-padding-16 w3-border" type="text" placeholder="Survey Request/Information" required name="Message"></textarea></p>
+      <p><input class="w3-input w3-padding-16 w3-border" type="file" multiple placeholder="Files" required name="files"></p>
       <p><button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button></p>
     </form>
   </div>
@@ -171,7 +172,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a>
+    <img src="/w3images/chesnutlandsurveying_logo.jpg" alt="logo" style="width:200px;height:200px;margin:20px">
+  </p>
 </footer>
 
 <script>
