--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Chesnut Land Surveying</title>
+<title>Chesnut Land Surveying LLC</title>
 <link rel="icon" type="image/x-icon" href="/w3images/chesnutlandsurveying_logo.jpg">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   font-weight: 400;
   font-style: normal;
 }
-
 
 .column {
   float: left;
@@ -82,7 +81,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <header class="bgimg w3-display-container" id="home">
   <div class="w3-display-middle w3-center" style="line-height:0.5">
     <span class="w3-text-black w3-hide-small" style="font-size:150px"><b>Chesnut<br>
-    	<span class="w3-text-black w3-hide-small" style="font-size:75px">Land Surveying
+    	<span class="w3-text-black w3-hide-small" style="font-size:65px">Land Surveying LLC
         </span>
       </span>
     <span class="w3-text-black w3-hide-large w3-hide-medium" style="font-size:100px"><b>Chesnut<br>
@@ -146,10 +145,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   </div>
 </div>
 
-<!-- Image of location/map
-<img src="/w3images/chesnutlandsurveying_logo.jpg" class="w3-image w3-greyscale" style="width:100%;" id="logo">
- -->
-
 <!-- Contact -->
 <div class="w3-container w3-padding-48 w3-light-green w3-grayscale w3-xlarge" id="contact">
   <div class="w3-content">
@@ -171,10 +166,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </div>
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-48 w3-xxlarge">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a>
+<footer class="w3-center w3-black w3-padding-48 w3-xlarge">
     <img src="/w3images/chesnutlandsurveying_logo.jpg" alt="logo" style="width:200px;height:200px;margin:20px">
-  </p>
+    <p>&copy; 2024 - Susan Chesnut</br>
+      Chesnut Land Surveying LLC</br>
+      Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a>
+    </p>
 </footer>
 
 <script>
