--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- About Section -->
 <div class="w3-row w3-center w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-      <img src="w3images/susanchesnut.jpg" class="w3-round w3-image" alt="susanchesnut" width="600" height="750">
+      <img src="w3images/website_photo_cropped.jpg" class="w3-round w3-image" alt="susanchesnut" width="600" height="750">
     </div>
 
   <div class="w3-col m6 w3-padding-large" style="line-height:1.5">
