Update index.html FB link

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <p class="w3-xlarge">
       Cell: 256-557-3285
       <br>Email: <a href="mailto:chesnutsurveying@gmail.com">chesnutsurveying@gmail.com</a></br>
-      <a href="https://www.facebook.com/profile.php?id=61556077124398" target="_blank">
+      <a href="https://www.facebook.com/chesnutsurveying/" target="_blank">
         <img src="/w3images/Facebook_Logo_Primary.png" alt="Facebook" style="width:42px;height:42px;margin:10px">
       </a>
       <a href="https://www.linkedin.com/in/susanchesnut/" target="_blank">
