Added form submission backend

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <link rel="icon" type="image/x-icon" href="/w3images/chesnutlandsurveying_logo.jpg">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="surveying,survey,boundary,property,land,chesnut,chestnut, Licensed land surveyor near me,Professional land surveying services Nashville, TN,Best land surveyors in Nashville, TN,">
+<meta name="description" content="Need Land Surveying? Call Us!">
+<meta name="robots" content="index,follow">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
@@ -154,13 +157,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.
  
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
+    <form   action="https://formspree.io/f/mdoqgwkj"
+            method="POST"
+            enctype="multipart/form-data">
+      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="name"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="tel" placeholder="Phone Number" required name="phone"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="phone"></p>
-      <p><textarea class="w3-input w3-padding-16 w3-border" type="text" placeholder="Survey Request/Information" required name="Message"></textarea></p>
+      <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="email"></p>
+      <p><textarea class="w3-input w3-padding-16 w3-border" type="text" placeholder="Survey Request/Information" required name="message"></textarea></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="file" multiple placeholder="Files" required name="files"></p>
       <p><button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button></p>
+
+
     </form>
   </div>
 </div>
