--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <p><input class="w3-input w3-padding-16 w3-border" type="tel" placeholder="Phone Number" required name="phone"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="email"></p>
       <p><textarea class="w3-input w3-padding-16 w3-border" type="text" placeholder="Survey Request/Information" required name="message"></textarea></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="file" multiple placeholder="Files" required name="files"></p>
+      <p><input class="w3-input w3-padding-16 w3-border" type="file" multiple placeholder="Files" name="files"></p>
       <p><button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button></p>
 
 
