--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
  
     <form   action="https://formspree.io/f/mdoqgwkj"
             method="POST"
-            enctype="multipart/form-data">
+            enctype="multipart/form-data"
+            target="_blank">
       <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="name"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="tel" placeholder="Phone Number" required name="phone"></p>
       <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="email"></p>
