Update index.html for ADA compliance

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>Chesnut Land Surveying LLC</title>
 <link rel="icon" type="image/x-icon" href="/w3images/chesnutlandsurveying_logo.jpg">
@@ -135,10 +135,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       property line staking, and property corner location. 
     </p>
     <p class="w3-text-white">Possible scenarios we can help with:</p>
-    <li style="margin-left:20px">Where are my property corners or property lines?</li>
-    <li style="margin-left:20px">I have a loan closing or re-finance coming up on my home in a subdivision.</li>
-    <li style="margin-left:20px">I’m purchasing a lot/house in a recorded subdivision.</li>
-    <li style="margin-left:20px">I’m purchasing a larger tract of land that hasn’t been subdivided in the past.</li>
+    <ul role="list">
+      <li role="listitem" style="margin-left:20px">Where are my property corners or property lines?</li>
+      <li role="listitem" style="margin-left:20px">I have a loan closing or re-finance coming up on my home in a subdivision.</li>
+      <li role="listitem" style="margin-left:20px">I’m purchasing a lot/house in a recorded subdivision.</li>
+      <li role="listitem" style="margin-left:20px">I’m purchasing a larger tract of land that hasn’t been subdivided in the past.</li>
+    </ul>
     
     <p class="w3-mid w3-text-white">Should your particular concern not be listed, 
       please connect with us for a discussion about your needs.
