--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Chesnut Land Surveying LLC</title>
+<title>Chesnut Land Surveying LLC - Professional Land Surveyor in Nashville, TN</title>
 <link rel="icon" type="image/x-icon" href="/w3images/chesnutlandsurveying_logo.jpg">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="keywords" content="surveying,survey,boundary,property,land,chesnut,chestnut, Licensed land surveyor near me,Professional land surveying services Nashville, TN,Best land surveyors in Nashville, TN,">
-<meta name="description" content="Need Land Surveying? Call Us!">
+<meta name="keywords" content="surveying, survey, boundary, property, land, Chesnut, Nashville, TN, land surveyor, professional surveying services">
+<meta name="description" content="Chesnut Land Surveying LLC offers professional land surveying services in Nashville, TN. Contact us for boundary surveys, property surveys, and more.">
 <meta name="robots" content="index,follow">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -68,36 +68,81 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </head>
 <body>
 
+  <!-- Schema Markup for Local Business -->
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "Chesnut Land Surveying LLC",
+    "image": "/w3images/chesnutlandsurveying_logo.jpg",
+    "@id": "",
+    "url": "https://chesnutsurveying.com/",
+    "telephone": "256-557-3285",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "",
+      "addressLocality": "Nashville",
+      "addressRegion": "TN",
+      "postalCode": "",
+      "addressCountry": "US"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "",
+      "longitude": ""
+    },
+    "openingHoursSpecification": [{
+      "@type": "OpeningHoursSpecification",
+      "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+      ],
+      "opens": "09:00",
+      "closes": "17:00"
+    }],
+    "sameAs": [
+      "https://www.facebook.com/chesnutsurveying/",
+      "https://www.linkedin.com/in/susanchesnut/",
+      "https://www.yelp.com/biz/chesnut-land-surveying-nashville"
+    ]
+  }
+  </script>
 
 
 <!-- Navbar (sit on top) -->
-  <div class="w3-top w3-hide-small">
+<div class="w3-top w3-hide-small">
   <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
     <a href="#" class="w3-bar-item w3-button">HOME</a>
     <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
     <a href="#services" class="w3-bar-item w3-button">SERVICES</a>
     <a href="#contact" class="w3-bar-item w3-button">CONTACT</a>
   </div>
-</div
-  
+</div>
+
 <!-- Header with image -->
 <header class="bgimg w3-display-container" id="home">
   <div class="w3-display-middle w3-center" style="line-height:0.5">
     <span class="w3-text-black w3-hide-small" style="font-size:150px"><b>Chesnut<br>
-    	<span class="w3-text-black w3-hide-small" style="font-size:65px">Land Surveying LLC
+        <span class="w3-text-black w3-hide-small" style="font-size:65px">Land Surveying LLC
         </span>
       </span>
     <span class="w3-text-black w3-hide-large w3-hide-medium" style="font-size:100px"><b>Chesnut<br>
-    	<span class="w3-text-black w3-hide-medium" style="font-size:50px">Land Surveying
+        <span class="w3-text-black w3-hide-medium" style="font-size:50px">Land Surveying
         </span>
     </span>
   </div>
 </header>
 
+<!-- Main content for skip link -->
+<div id="maincontent">
+
 <!-- About Section -->
 <div class="w3-row w3-center w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-      <img src="w3images/website_photo_cropped.jpg" class="w3-round w3-image" alt="susanchesnut" width="600" height="750">
+      <img src="w3images/website_photo_cropped.jpg" class="w3-round w3-image" alt="Susan Chesnut, Registered Land Surveyor" width="600" height="750">
     </div>
 
   <div class="w3-col m6 w3-padding-large" style="line-height:1.5">
@@ -117,10 +162,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       Cell: 256-557-3285
       <br>Email: <a href="mailto:chesnutsurveying@gmail.com">chesnutsurveying@gmail.com</a></br>
       <a href="https://www.facebook.com/chesnutsurveying/" target="_blank">
-        <img src="/w3images/Facebook_Logo_Primary.png" alt="Facebook" style="width:42px;height:42px;margin:10px">
+        <img src="/w3images/Facebook_Logo_Primary.png" alt="Facebook page of Chesnut Land Surveying" style="width:42px;height:42px;margin:10px">
       </a>
       <a href="https://www.linkedin.com/in/susanchesnut/" target="_blank">
-        <img src="/w3images/LI-In-Bug.png" alt="LinkedIn" style="width:42px;height:42px;margin:10px">
+        <img src="/w3images/LI-In-Bug.png" alt="LinkedIn profile of Susan Chesnut" style="width:42px;height:42px;margin:10px">
       </a>
       </p>
   </div>
@@ -159,25 +204,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.
  
-    <form   action="https://formspree.io/f/mdoqgwkj"
-            method="POST"
-            enctype="multipart/form-data"
-            target="_blank">
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="name"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="tel" placeholder="Phone Number" required name="phone"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="email"></p>
-      <p><textarea class="w3-input w3-padding-16 w3-border" type="text" placeholder="Survey Request/Information" required name="message"></textarea></p>
-      <!--<p><input class="w3-input w3-padding-16 w3-border" type="file" multiple placeholder="Files" name="files"></p>-->
-      <p><button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button></p>
-
-
+    <form action="https://formspree.io/f/mdoqgwkj" method="POST" enctype="multipart/form-data" target="_blank">
+      <p>
+        <label for="name">Name</label>
+        <input id="name" class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="name">
+      </p>
+      <p>
+        <label for="phone">Phone Number</label>
+        <input id="phone" class="w3-input w3-padding-16 w3-border" type="tel" placeholder="Phone Number" required name="phone">
+      </p>
+      <p>
+        <label for="email">Email</label>
+        <input id="email" class="w3-input w3-padding-16 w3-border" type="email" placeholder="Email" required name="email">
+      </p>
+      <p>
+        <label for="message">Survey Request/Information</label>
+        <textarea id="message" class="w3-input w3-padding-16 w3-border" placeholder="Survey Request/Information" required name="message"></textarea>
+      </p>
+      <p>
+        <button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button>
+      </p>
     </form>
+    
   </div>
 </div>
 
+</div> <!-- Closing tag for main content -->
+
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-48 w3-xlarge">
-    <img src="/w3images/chesnutlandsurveying_websiteLogo.jpg" alt="logo" style="width:200px;height:200px;margin:20px">
+    <img src="/w3images/chesnutlandsurveying_websiteLogo.jpg" alt="Chesnut Land Surveying logo" style="width:200px;height:200px;margin:20px">
     <p>&copy; 2024 - Susan Chesnut</br>
       Chesnut Land Surveying LLC</br>
       Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a>
