Added better placeholder for survey request

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </p>
       <p>
         <label for="message">Survey Request/Information</label>
-        <textarea id="message" class="w3-input w3-padding-16 w3-border" placeholder="Survey Request/Information" required name="message"></textarea>
+        <textarea id="message" class="w3-input w3-padding-16 w3-border" placeholder="Property Address and Type of Survey Needed" required name="message"></textarea>
       </p>
       <p>
         <button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button>
