--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <p>
         <button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button>
       </p>
+      <input name="subject" type="hidden" value="New submission from {{ name }}" />
     </form>
     
   </div>
