--- a/index.html
+++ b/index.html
@@ -200,11 +200,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo protest-strike-regular" style="margin-bottom:64px">Contact</h1>
     <p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
-    <p>Call us at 256-557-3285 or fill out the form below for a free quote!</p>
+    <p>Call me at 256-557-3285 or fill out the form below for a free quote!</p>
     <br>
 
-    <p>We are currently scheduling new jobs 4-6 weeks away from when a quote is accepted.</p>
+    <p>I am currently scheduling new jobs 4-6 weeks away from when a quote is accepted.</p>
     <p>Please note responses could take a few days after submitting a quote request, depending on the volume of current jobs.</p>
+    <p>After submitting the request, a new tab should pop up with a confirmation. You should also receive a confirmation email from chesnutsurveying@gmail.com</p>
 
     <br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.
  
@@ -234,11 +235,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <input type="checkbox" id="boundary" name="surveys" value="Boundary">
         <label for="boundary">Boundary</label><br>
         <input type="checkbox" id="linestaking" name="surveys" value="PLS">
-        <label for="linestaking">Line Staking</label><br>
+        <label for="linestaking">Line Staking (wooden stakes will be place every 50-100 feet along the boundary lines; usually combined with a boundary)</label><br>
         <input type="checkbox" id="site_plan" name="surveys" value="Site Plan">
         <label for="site_plan">Site Plan</label><br>
         <input type="checkbox" id="soil_test" name="surveys" value="Soil Test">
-        <label for="soil_test">Soil Test</label><br>
+        <label for="soil_test">Soil Grid Map</label><br>
         <input type="checkbox" id="topographic" name="surveys" value="Topographic">
         <label for="topographic">Topographic</label>
         
