--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <input type="checkbox" id="boundary" name="surveys" value="Boundary">
         <label for="boundary">Boundary</label><br>
         <input type="checkbox" id="linestaking" name="surveys" value="PLS">
-        <label for="linestaking">Line Staking (wooden stakes will be place every 50-100 feet along the boundary lines; usually combined with a boundary)</label><br>
+        <label for="linestaking">Line Staking (wooden stakes will be placed every 50-100 feet along the boundary lines)</label><br>
         <input type="checkbox" id="site_plan" name="surveys" value="Site Plan">
         <label for="site_plan">Site Plan</label><br>
         <input type="checkbox" id="soil_test" name="surveys" value="Soil Test">
