--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <p>I am currently scheduling new jobs 4-6 weeks away from when a quote is accepted.</p>
     <p>Please note responses could take a few days after submitting a quote request, depending on the volume of current jobs.</p>
-    <p>After submitting the request, a new tab should pop up with a confirmation. You should also receive a confirmation email from chesnutsurveying@gmail.com</p>
+    <p>After submitting the request, a new tab should pop up with a confirmation.</p>
 
     <br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.
  
