Update index.html for no new projects

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-container w3-padding-48 w3-light-green w3-grayscale w3-xlarge" id="contact">
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo protest-strike-regular" style="margin-bottom:64px">Contact</h1>
-    <p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
+    <p>Thank you for your interest! Unfortunately at this time, I am no longer offering free quotes. I am booked through August and will begin offering them again once I am able to commit to more projects.</em></p>
+     <!--<p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
     <p>Call me at 256-557-3285 or fill out the form below for a free quote!</p>
     <br>
 
@@ -208,7 +209,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <p>After submitting the request, a new tab should pop up with a confirmation.</p>
 
     <br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.
- 
+
     <form action="https://formspree.io/f/mdoqgwkj" method="POST" enctype="multipart/form-data" target="_blank">
       <p>
         <label for="name">Name</label>
@@ -253,6 +254,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </p>
       <input name="subject" type="hidden" value="New submission from {{ name }}" />
     </form>
+    -->
     
   </div>
 </div>
