--- a/index.html
+++ b/index.html
@@ -199,10 +199,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="w3-container w3-padding-48 w3-light-green w3-grayscale w3-xlarge" id="contact">
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo protest-strike-regular" style="margin-bottom:64px">Contact</h1>
+    <!--
     <p>Thank you for your interest! At this time, I am no longer offering free quotes. 
       I will begin offering them again once I am able to commit to more projects (late September). 
       My lead time for field work is 4-6 weeks from the time I receive a signed Service Agreement.</em></p>
-     <!--<p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
+     -->
+     <p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
     <p>Call me at 256-557-3285 or fill out the form below for a free quote!</p>
     <br>
 
@@ -256,7 +258,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </p>
       <input name="subject" type="hidden" value="New submission from {{ name }}" />
     </form>
-    -->
     
   </div>
 </div>
