--- a/index.html
+++ b/index.html
@@ -204,15 +204,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       I will begin offering them again once I am able to commit to more projects (late September). 
       My lead time for field work is 4-6 weeks from the time I receive a signed Service Agreement.</em></p>
      -->
-     <p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
+    <p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
     <p>Call me at 256-557-3285 or fill out the form below for a free quote!</p>
     <br>
 
     <p>I am currently scheduling new jobs 4-6 weeks away from when a quote is accepted.</p>
     <p>Please note responses could take a few days after submitting a quote request, depending on the volume of current jobs.</p>
-    <p>After submitting the request, a new tab should pop up with a confirmation.</p>
 
-    <br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.
+    <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
 
     <form action="https://formspree.io/f/mdoqgwkj" method="POST" enctype="multipart/form-data" target="_blank">
       <p>
@@ -256,6 +255,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <p>
         <button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button>
       </p>
+      <p>After submitting the request, a new tab should pop up with a confirmation.</p>
       <input name="subject" type="hidden" value="New submission from {{ name }}" />
     </form>
     
