Update index.html with google analytics tag

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <li role="listitem" style="margin-left:20px">Where are my property corners or property lines?</li>
       <li role="listitem" style="margin-left:20px">I have a loan closing or re-finance coming up on my home in a subdivision.</li>
       <li role="listitem" style="margin-left:20px">I’m purchasing a lot/house in a recorded subdivision.</li>
-      <li role="listitem" style="margin-left:20px">I’m purchasing a larger tract of land that hasn’t been subdivided in the past.</li>
+      <li role="listitem" style="margin-left:20px">The city is requiring a Site Plan for an addition.</li>
     </ul>
     
     <p class="w3-mid w3-text-white">Should your particular concern not be listed, 
@@ -192,6 +192,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       I am more than happy to help!
     </p>
 
+    <!--<p>The work involved in a boundary survey includes a thorough review of existing records, measurements, 
+      and verification of all property boundaries to ensure accuracy. 
+      When giving a quote, I will need to account for the time and effort required to locate 
+      and set the missing markers, as well as confirm the accuracy of the existing markers.</p>
+  --->
   </div>
 </div>
 
@@ -208,7 +213,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <p>Call me at 256-557-3285 or fill out the form below for a free quote!</p>
     <br>
 
-    <p>I am currently scheduling new jobs 4-6 weeks away from when a quote is accepted.</p>
+    <p>I am currently scheduling new jobs' field work 2-5 weeks away from receiving a signed agreement.</p>
     <p>Please note responses could take a few days after submitting a quote request, depending on the volume of current jobs.</p>
 
     <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
@@ -294,7 +299,7 @@ document.getElementById("myLink").click();
 </body>
 </html>
 
-<!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js)
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16459943850">
 </script>
 <script>
@@ -304,3 +309,14 @@ document.getElementById("myLink").click();
 
   gtag('config', 'AW-16459943850');
 </script>
+-->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4XVES01221"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4XVES01221');
+</script>
+
