Update services section

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <h1 class="w3-center w3-jumbo w3-text-black protest-strike-regular" style="margin-bottom:-10px">About</h1><br>
 
       <p class="w3-left w3-xlarge w3-left-align" style="margin-bottom:-5px">I am a Registered Land Surveyor in Tennessee (RLS #3378). 
-      Whether it's marking property lines, conducting boundary surveys, or preparing legal documents, 
+      Whether it's conducting research, executing field work, or drafting the final boundary map, 
       I approach each task with professionalism and attention to detail, 
       tailored to meet the specific needs of my clients.
       <br>
@@ -176,27 +176,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   
   <div class="w3-content">
     <h1 class="w3-center w3-jumbo w3-text-white protest-strike-regular" style="margin-bottom:48px">Services</h1>
-    <p>Chesnut Land Surveying primarily provides boundary surveys, retracements surveys, 
-      property line staking, and property corner location. 
+    <p>
+        Chesnut Land Surveying primarily provides boundary surveys and property line staking.
     </p>
-    <p class="w3-text-white">Possible scenarios we can help with:</p>
+     
+  <p> A boundary survey is more than just measuring property lines and marking corners. It involves 
+    <ul role="list">
+      <li role="listitem" style="margin-left:20px">thorough research of historical records,</li>
+      <li role="listitem" style="margin-left:20px">careful verification of boundaries,</li>
+      <li role="listitem" style="margin-left:20px">precise measurements using professional-grade equipment,</li>
+      <li role="listitem" style="margin-left:20px">and time in the office to draft and finalize the survey map.</li>
+    </ul> 
+    By investing in a detailed survey, you ensure that your property lines are accurate and legally defendable, 
+    protecting you from potential disputes or costly mistakes in the future. My approach prioritizes 
+    accuracy and compliance with professional standards, ensuring long-term peace of mind.
+  </p>
+   <br>
+    <p class="w3-text-white">Possible scenarios I can help with:</p>
     <ul role="list">
       <li role="listitem" style="margin-left:20px">Where are my property corners or property lines?</li>
-      <li role="listitem" style="margin-left:20px">I have a loan closing or re-finance coming up on my home in a subdivision.</li>
-      <li role="listitem" style="margin-left:20px">I’m purchasing a lot/house in a recorded subdivision.</li>
+      <li role="listitem" style="margin-left:20px">I’m purchasing a lot/house and want to be sure I know what I'm buying.</li>
       <li role="listitem" style="margin-left:20px">The city is requiring a Site Plan for an addition.</li>
+      <li role="listitem" style="margin-left:20px">I need to resolve a dispute with a neighbor over property lines.</li>
+      <li role="listitem" style="margin-left:20px">I’m planning to build a fence or other structure.</li>
+      <li role="listitem" style="margin-left:20px">The city or county requires a survey for a permit.</li>
+      <li role="listitem" style="margin-left:20px">I need a topographic survey for a new development project.</li>
     </ul>
-    
-    <p class="w3-mid w3-text-white">Should your particular concern not be listed, 
-      please connect with us for a discussion about your needs.
-      I am more than happy to help!
-    </p>
-
-    <!--<p>The work involved in a boundary survey includes a thorough review of existing records, measurements, 
-      and verification of all property boundaries to ensure accuracy. 
-      When giving a quote, I will need to account for the time and effort required to locate 
-      and set the missing markers, as well as confirm the accuracy of the existing markers.</p>
-  --->
   </div>
 </div>
 
