Update About Me

--- a/index.html
+++ b/index.html
@@ -148,12 +148,14 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-col m6 w3-padding-large" style="line-height:1.5">
     <h1 class="w3-center w3-jumbo w3-text-black protest-strike-regular" style="margin-bottom:-10px">About</h1><br>
 
-      <p class="w3-left w3-xlarge w3-left-align" style="margin-bottom:-5px">I am a Registered Land Surveyor in Tennessee (RLS #3378). 
-      Whether it's conducting research, executing field work, or drafting the final boundary map, 
-      I approach each task with professionalism and attention to detail, 
-      tailored to meet the specific needs of my clients.
+      <p class="w3-left w3-xlarge w3-left-align" style="margin-bottom:-5px">
+        As a Registered Land Surveyor in Tennessee (RLS #3378), I bring a high level of professionalism 
+        and attention to detail to every project. From in-depth research and precise fieldwork to creating 
+        comprehensive boundary maps, I am dedicated to delivering results that meet your specific needs and 
+        exceed your expectations. My commitment to accuracy and client satisfaction drives my work, ensuring
+        that each task is approached with care and expertise.
       <br>
-      <br>I look forward to working with you!
+      <br>I look forward to the opportunity to assist you with your surveying needs and contribute to the success of your project.
       <br>Susan Chesnut</br>
       <br>
     </p>
