--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <h1 class="w3-center w3-jumbo w3-text-black protest-strike-regular" style="margin-bottom:-10px">About</h1><br>
 
       <p class="w3-left w3-xlarge w3-left-align" style="margin-bottom:-5px">
-        As a Registered Land Surveyor in Tennessee (RLS #3378), I bring a high level of professionalism 
+        As a Registered Land Surveyor in Tennessee, I bring a high level of professionalism 
         and attention to detail to every project. From in-depth research and precise fieldwork to creating 
         comprehensive boundary maps, I am dedicated to delivering results that meet your specific needs and 
         exceed your expectations. My commitment to accuracy and client satisfaction drives my work, ensuring
@@ -157,6 +157,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <br>
       <br>I look forward to the opportunity to assist you with your surveying needs and contribute to the success of your project.
       <br>Susan Chesnut</br>
+      <br>RLS #3378</br>
       <br>
     </p>
    
