--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <br>
       <br>I look forward to the opportunity to assist you with your surveying needs and contribute to the success of your project.
       <br>Susan Chesnut</br>
-      <br>RLS #3378</br>
+      RLS #3378
       <br>
     </p>
    
