--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <p> A boundary survey is more than just measuring property lines and marking corners. It involves 
     <ul role="list">
       <li role="listitem" style="margin-left:20px">thorough research of historical records,</li>
-      <li role="listitem" style="margin-left:20px">careful verification of boundaries,</li>
+      <li role="listitem" style="margin-left:20px">careful verification of boundaries (including neighbors'),</li>
       <li role="listitem" style="margin-left:20px">precise measurements using professional-grade equipment,</li>
       <li role="listitem" style="margin-left:20px">and time in the office to draft and finalize the survey map.</li>
     </ul> 
