--- a/index.html
+++ b/index.html
@@ -248,17 +248,17 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <input id="address" class="w3-input w3-padding-16 w3-border" type="text" placeholder="Property Address" required name="address">
       </p>
       <p>
-        <label for="surveys">Type of Surveys (Select all that apply)</label><br>
+        <label for="surveys">Type of Services (Select all that apply)</label><br>
         <input type="checkbox" id="boundary" name="surveys" value="Boundary">
-        <label for="boundary">Boundary</label><br>
+        <label for="boundary">Boundary Survey</label><br>
         <input type="checkbox" id="linestaking" name="surveys" value="PLS">
-        <label for="linestaking">Line Staking (wooden stakes will be placed every 50-100 feet along the boundary lines)</label><br>
+        <label for="linestaking">Line Staking (wooden stakes will be placed along the boundary lines)</label><br>
         <input type="checkbox" id="site_plan" name="surveys" value="Site Plan">
         <label for="site_plan">Site Plan</label><br>
         <input type="checkbox" id="soil_test" name="surveys" value="Soil Test">
         <label for="soil_test">Soil Grid Map</label><br>
         <input type="checkbox" id="topographic" name="surveys" value="Topographic">
-        <label for="topographic">Topographic</label>
+        <label for="topographic">Topographic Survey</label>
         
       </p>
       <p>
